#Add auth guard, jwt token

--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -20,10 +20,12 @@
   }
   &__item {
     margin: 0 5px;
+    color: #fff;
   }
   &__link {
     padding: 0 5px;
     color: #fff;
+    cursor: pointer;
 
   }
 }
