--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -4,11 +4,21 @@
       <a class="logo" routerLink="/">Booking App</a>
       <ul class="menu__list">
         <li class="menu__item">
-          <a class="menu__link" routerLink="/login">Login</a>
+          <a class="menu__link" routerLink="/">Home</a>
         </li>
-        <li class="menu__item">
-          <a class="menu__link" routerLink="/register">Register</a>
-        </li>
+        <ng-container *ngIf="!auth.isAuthenticated()">
+          <li class="menu__item">
+            <a class="menu__link" routerLink="/login">Login</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" routerLink="/register">Register</a>
+          </li>
+        </ng-container>
+        <ng-container *ngIf="auth.isAuthenticated()">
+          <li class="menu__item">
+            <a class="menu__link" (click)="logout()">Logout</a>
+          </li>
+        </ng-container>
       </ul>
     </nav>
   </div>
