--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,4 +1,5 @@
-<div class="row justify-content-center">
+<div class="container">
+  <div class="row justify-content-center">
     <div class="auth">
       <div class="auth__box">
         <h3 class="auth__title">Register</h3>
@@ -47,4 +48,5 @@
         </div>
       </div>
     </div>
+  </div>
 </div>
