--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -6,6 +6,9 @@
         <li class="menu__item">
           <a class="menu__link" routerLink="/">Home</a>
         </li>
+        <li class="menu__item">
+          <a class="menu__link" routerLink="/flat">Flats</a>
+        </li>
         <ng-container *ngIf="!auth.isAuthenticated()">
           <li class="menu__item">
             <a class="menu__link" routerLink="/login">Login</a>
