--- a/src/assets/styles/helpers/_bootstrap-custom.scss
+++ b/src/assets/styles/helpers/_bootstrap-custom.scss
@@ -10,12 +10,16 @@ $grid-breakpoints: (
   sm: 576px,
   md: 768px,
   lg: 992px,
-  xl: 1200px,
+  xl: 1200px
 );
 
 $container-max-widths: (
   sm: 540px,
   md: 720px,
   lg: 960px,
-  xl: 1110px,
+  xl: 1160px
 );
+
+$grid-columns: 12;
+$grid-gutter-width: 20px;
+$grid-row-columns: 6;
