--- a/src/assets/styles/helpers/_varibles.scss
+++ b/src/assets/styles/helpers/_varibles.scss
@@ -3,3 +3,10 @@ $body-bg: #f4f7fc;
 $loader-bg: #b6b6b6;
 $component-bg: #fff;
 $main-border: #b6b6b6;
+
+$body-bg: #f7f7f7;
+$body-color: #383838;
+
+$link-color: #febb02;
+$link-hover-color: $body-color;
+$link-hover-decoration: none;
