--- a/src/app/flat/flat-list-item/flat-list-item.component.scss
+++ b/src/app/flat/flat-list-item/flat-list-item.component.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/styles/helpers/varibles';
+
 .flat {
   $self: &;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.15);
@@ -21,5 +23,6 @@
   &__content {
     text-align: center;
     padding: 25px 15px;
+    color: $body-color;
   }
 }
