--- a/src/app/common/loader/loader.component.scss
+++ b/src/app/common/loader/loader.component.scss
@@ -1,10 +1,12 @@
 @import '../../../assets/styles/helpers/varibles';
+
 .loader {
   margin: 50px auto;
   width: 60px;
   height: 60px;
   position: relative;
   animation: loader 2.5s infinite linear both;
+
   &__dot {
     width: 100%;
     height: 100%;
@@ -12,13 +14,15 @@
     left: 0;
     top: 0;
     animation: loader-dot 2.0s infinite ease-in-out both;
+
     &:nth-child(1) { animation-delay: -1.1s; }
     &:nth-child(2) { animation-delay: -1.0s; }
     &:nth-child(3) { animation-delay: -0.9s; }
     &:nth-child(4) { animation-delay: -0.8s; }
     &:nth-child(5) { animation-delay: -0.7s; }
     &:nth-child(6) { animation-delay: -0.6s; }
-    &:before {
+
+    &::before {
       content: '';
       display: block;
       width: 25%;
@@ -26,12 +30,14 @@
       background-color: $loader-bg;
       border-radius: 100%;
       animation: loader-dot-before 2.0s infinite ease-in-out both;
-      &:nth-child(1):before { animation-delay: -1.1s; }
-      &:nth-child(2):before { animation-delay: -1.0s; }
-      &:nth-child(3):before { animation-delay: -0.9s; }
-      &:nth-child(4):before { animation-delay: -0.8s; }
-      &:nth-child(5):before { animation-delay: -0.7s; }
-      &:nth-child(6):before { animation-delay: -0.6s; }
+
+      &:nth-child(1)::before { animation-delay: -1.1s; }
+      &:nth-child(2)::before { animation-delay: -1.0s; }
+      &:nth-child(3)::before { animation-delay: -0.9s; }
+      &:nth-child(4)::before { animation-delay: -0.8s; }
+      &:nth-child(5)::before { animation-delay: -0.7s; }
+      &:nth-child(6)::before { animation-delay: -0.6s; }
+
     }
   }
 }
