--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -10,9 +10,9 @@
                       type="text"
                       id="email"
                       formControlName="email">
-              <mat-error *ngIf="isInvalidForm('email')" >
+              <mat-error *ngIf="isInvalidForm('email')">
                 <div *ngIf="isRequired('email')">Email is required</div>
-                <div *ngIf="loginForm.controls['email'].errors.pattern">Must be valid email format!</div>
+                <div *ngIf="isInvalidPattern('email')">Must be valid email format!</div>
               </mat-error>
           </mat-form-field>
           <mat-form-field class="d-block">
