Add flat search component and search service

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -25,6 +25,9 @@
             <a class="menu__link" (click)="logout()">Logout</a>
           </li>
         </ng-container>
+        <li class="menu__item">
+          <a class="menu__link" (click)="openSearch()"><mat-icon class="menu__search-icon" aria-hidden="false" aria-label="Search">search</mat-icon></a>
+        </li>
       </ul>
     </nav>
   </div>
