--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -30,4 +30,10 @@
     color: #fff;
     cursor: pointer;
   }
+  &__search-icon {
+    width: auto;
+    height: auto;
+    font-size: 18px;
+    line-height: inherit;
+  }
 }
