--- a/src/app/flat/flat-list-item/flat-list-item.component.html
+++ b/src/app/flat/flat-list-item/flat-list-item.component.html
@@ -1,5 +1,5 @@
 <div class="flat">
-  <a class="flat__link" routerLink="{{flat._id}}">
+  <a class="flat__link" routerLink="/flat/{{flat._id}}">
     <div class="flat__image-wrapper">
       <img class="flat__image" src="http://via.placeholder.com/700x500" alt="">
     </div>
